@@ -16,7 +16,7 @@
 package org.exbin.bined.netbeans.debug.array;
 
 import java.nio.ByteBuffer;
-import org.exbin.bined.netbeans.debug.DebugViewDataSource;
+import org.exbin.bined.netbeans.debug.DebugViewData;
 import org.netbeans.api.debugger.jpda.Field;
 import org.netbeans.api.debugger.jpda.ObjectVariable;
 
@@ -27,7 +27,7 @@ import org.netbeans.api.debugger.jpda.ObjectVariable;
  * @author ExBin Project (http://exbin.org)
  * @version 0.2.1 2019/09/04
  */
-public class DoubleArrayPageProvider implements DebugViewDataSource.PageProvider {
+public class DoubleArrayPageProvider implements DebugViewData.PageProvider {
 
     private final byte[] valuesCache = new byte[8];
     private final ByteBuffer byteBuffer = ByteBuffer.wrap(valuesCache);
@@ -40,7 +40,7 @@ public class DoubleArrayPageProvider implements DebugViewDataSource.PageProvider
 
     @Override
     public byte[] getPage(long pageIndex) {
-        int pageSize = DebugViewDataSource.PAGE_SIZE / 8;
+        int pageSize = DebugViewData.PAGE_SIZE / 8;
         int startPos = (int) (pageIndex * pageSize);
         int length = pageSize;
         if (arrayRef.getFieldsCount() - startPos < pageSize) {
