@@ -16,7 +16,7 @@
 package org.exbin.bined.netbeans.debug.array;
 
 import java.math.BigInteger;
-import org.exbin.bined.netbeans.debug.DebugViewDataSource;
+import org.exbin.bined.netbeans.debug.DebugViewData;
 import org.exbin.framework.bined.panel.ValuesPanel;
 import org.netbeans.api.debugger.jpda.Field;
 import org.netbeans.api.debugger.jpda.ObjectVariable;
@@ -27,7 +27,7 @@ import org.netbeans.api.debugger.jpda.ObjectVariable;
  * @author ExBin Project (http://exbin.org)
  * @version 0.2.1 2019/09/04
  */
-public class LongArrayPageProvider implements DebugViewDataSource.PageProvider {
+public class LongArrayPageProvider implements DebugViewData.PageProvider {
 
     private final ObjectVariable arrayRef;
 
@@ -37,7 +37,7 @@ public class LongArrayPageProvider implements DebugViewDataSource.PageProvider {
 
     @Override
     public byte[] getPage(long pageIndex) {
-        int pageSize = DebugViewDataSource.PAGE_SIZE / 8;
+        int pageSize = DebugViewData.PAGE_SIZE / 8;
         int startPos = (int) (pageIndex * pageSize);
         int length = pageSize;
         if (arrayRef.getFieldsCount() - startPos < pageSize) {
